# alembic-git-revisions

./: .gitignore  .mergify.yml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
alembic_git_revisions/: __init__.py  __main__.py  _chain.py
alembic_git_revisions/templates/: script.py.mako
tests/: test_chain.py
